Izmene na bazi. Resavanje duplih mailova.

--- a/en/php/baza.css
+++ b/en/php/baza.css
@@ -292,10 +292,11 @@ header {
 }
 
 #komande {
-    height: 36px;
+    /*height: 36px;*/
     margin-left: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
     border-bottom: 1px solid #FFDDD3;
+    overflow: overlay;
 }
 
 .dugme {
@@ -460,6 +461,7 @@ form.pretraga1 input[type="submit"]:hover {
 form.export_excel {
     float: left;
     margin-left: 20px;
+    margin-bottom: 0px;
 }
 
 input.export_button {
@@ -473,15 +475,41 @@ input.export_button {
     height: 36px;
     padding: 0 15px 0 15px;
     cursor: pointer;
+    margin-bottom: 0px;
 }
 
 input.export_button:hover {
     background-color: #2CAF67
 }
 
+form.duplikat {
+    float: left;
+    margin-left: 20px;
+    margin-bottom: 0px;
+}
+
+input.duplikat_button {
+    border: none;
+    background-color: #fbb040;
+    font-size: 0.8em;
+    color: #fff;
+    width: auto;
+    border-radius: 2px;
+    /* line-height: 1.5em; */
+    height: 36px;
+    padding: 0 15px 0 15px;
+    cursor: pointer;
+    margin-bottom: 0px;
+}
+
+input.duplikat_button:hover {
+    background-color: #d07d01
+}
+
 form.baza_app {
     float: right;
     margin-left: 20px;
+    margin-bottom: 0px;
 }
 
 input.baza_app_button {
@@ -495,6 +523,7 @@ input.baza_app_button {
     height: 36px;
     padding: 0 15px 0 15px;
     cursor: pointer;
+    margin-bottom: 0px;
 }
 
 input.baza_app_button:hover {
@@ -744,4 +773,37 @@ a#logoall {
     height: 75px;
     display: block;
     text-indent: -9999px;
+}
+
+.obrisano {
+    margin: 10px 0px 10px 20px;
+    padding: 5px 0px 5px 5px;
+    line-height: 1.5em;
+    background-color: #207245;
+    color: white;
+    font-size: 0.8em;
+}
+
+a.duplo {
+    padding: 1px 5px 1px 5px;
+    background-color: #fbb040;
+    color: white;
+    font-weight: bold;
+}
+
+a.duplo:hover {
+    background-color: #d07d01
+}
+
+td.tdcenter {
+    text-align: center;
+}
+
+.uputstvo {
+    background-color: #c5b9a0;
+    font-size: 0.8em;
+    padding: 5px;
+    margin-left: 20px;
+    color: #fff;
+    text-align: center;
 }
