--- a/en/css/style.css
+++ b/en/css/style.css
@@ -122,6 +122,7 @@ h5 {
 h6 {
     font-size: 12px;
 	line-height: 18px;
+	font-weight: 400;
 }
 
 p {
@@ -613,7 +614,7 @@ ul.social-list li:last-child a i {
     font-size: 14px;
 	font-weight: 400;
 	text-transform: uppercase;
-    padding: 28px 5px 28px 5px;
+    padding: 35px 5px 35px 5px;
 	overflow: hidden;
     transition: all 0.1s ease-in-out;
     -moz-transition: all 0.1s ease-in-out;
@@ -871,7 +872,7 @@ img.logo-full {
 .page-banner-naslovna .slika {
 	background-image: url("../images/bg1.jpg");
 	width: 100%;
-	height: 750px;
+	height: 690px;
 	left: 0;
 	top: 0;
 	right: 0;
@@ -1316,7 +1317,7 @@ a.link-naslovna:hover {
 
 
 /*------------------------------------------*/
-/*	   03 - Main Page Elements
+/*	   04 - Main Page Elements
 /*------------------------------------------*/
 
 
@@ -5706,35 +5707,6 @@ ul.footer-nav li a:hover {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .services-2 {
   position:relative;
   text-align:center;
@@ -5862,12 +5834,6 @@ ul.footer-nav li a:hover {
 
 
 
-
-
-
-
-
-
 /* Counter */
 
 .counter-item {
@@ -5898,9 +5864,6 @@ ul.footer-nav li a:hover {
 
 
 
-
-
-
 .parallax{
   width:100%; 
   padding: 0;
@@ -5920,11 +5883,6 @@ ul.footer-nav li a:hover {
 	background-position: 50% 0px !important; 
 	background-attachment: scroll !important;
 }
-
-
-
-
-
 
 
 
@@ -6005,6 +5963,81 @@ ul.footer-nav li a:hover {
 .navbar-collapse {
 	max-height: 340px;
 }
+
+
+
+/* ---------------------------------- NASLOVNA STRANICA ------------------------------------*/
+
+/* --------------- Tab B2B sa strane ---------------- */
+
+#side-tab a.b2b {
+	background: url(../images/b2btab/B2Bbanner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    -webkit-border-top-left-radius: 10px;
+	-webkit-border-bottom-left-radius: 10px;
+	-moz-border-radius-topleft: 10px;
+	-moz-border-radius-bottomleft: 10px;
+	border: 1px solid #fff;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
+	right: 0px;
+    top: 250px;
+    height: 108px;
+    width: 70px;
+    margin: 0;
+    padding: 0;
+    position: fixed;
+    z-index: 9999;
+    display: block;
+    -webkit-transition: width 2s; /* Safari */
+    transition: width 1s;
+
+}
+
+/* --------------- logos bar ---------------- */
+
+.logos {
+	margin-right: 15px;
+}
+
+.logos ul{
+	list-style-type: none;
+	text-align: center;
+	margin: 0 -15px 0 0;
+	background-color: #f2f2f2; 
+	padding-top: 5px;
+}
+
+.logos li{
+	display: inline-block;
+    padding: 2px 25px 15px 20px;
+   /* width: 120px;*/
+    margin-left: auto ;
+    margin-right: auto ;
+}
+
+.logos ul li img {
+    vertical-align: middle;
+    -webkit-filter: grayscale(100%); /* Chrome, Safari, Opera */
+    filter: grayscale(100%);
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+}
+
+.logos ul li img:hover {
+    -webkit-filter: none; /* Chrome, Safari, Opera */
+    filter: none;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+}
+
 
 
 /* popup form */
@@ -6288,4 +6321,285 @@ ul.icons-list li i {
     background-color: #ededed;
     border: 1px solid #C5C2C2;
     border-top: none;
+}
+
+
+/*------------------------------------ CSS za POP UP window -----------------------------------------*/
+
+.blur-in {
+    -webkit-animation: blur 1s forwards;
+    -moz-animation: blur 1s forwards;
+    -o-animation: blur 1s forwards;
+    animation: blur 1s forwards;
+}
+
+.blur-out {
+    -webkit-animation: blur-out 3s forwards;
+    -moz-animation: blur-out 3s forwards;
+    -o-animation: blur-out 3s forwards;
+    animation: blur-out 3s forwards;
+}
+
+@-webkit-keyframes blur {
+    0% {
+        -webkit-filter: blur(0px);
+        -moz-filter: blur(0px);
+        -o-filter: blur(0px);
+        -ms-filter: blur(0px);
+        filter: blur(0px);
+    }
+
+    100% {
+        -webkit-filter: blur(4px);
+        -moz-filter: blur(4px);
+        -o-filter: blur(4px);
+        -ms-filter: blur(4px);
+        filter: blur(4px);
+    }
+}
+
+@-moz-keyframes blur {
+    0% {
+        -webkit-filter: blur(0px);
+        -moz-filter: blur(0px);
+        -o-filter: blur(0px);
+        -ms-filter: blur(0px);
+        filter: blur(0px);
+    }
+
+    100% {
+        -webkit-filter: blur(4px);
+        -moz-filter: blur(4px);
+        -o-filter: blur(4px);
+        -ms-filter: blur(4px);
+        filter: blur(4px);
+    }
+}
+
+@-o-keyframes blur {
+    0% {
+        -webkit-filter: blur(0px);
+        -moz-filter: blur(0px);
+        -o-filter: blur(0px);
+        -ms-filter: blur(0px);
+        filter: blur(0px);
+    }
+
+    100% {
+        -webkit-filter: blur(4px);
+        -moz-filter: blur(4px);
+        -o-filter: blur(4px);
+        -ms-filter: blur(4px);
+        filter: blur(4px);
+    }
+}
+
+@keyframes blur {
+    0% {
+        -webkit-filter: blur(0px);
+        -moz-filter: blur(0px);
+        -o-filter: blur(0px);
+        -ms-filter: blur(0px);
+        filter: blur(0px);
+    }
+
+    100% {
+        -webkit-filter: blur(4px);
+        -moz-filter: blur(4px);
+        -o-filter: blur(4px);
+        -ms-filter: blur(4px);
+        filter: blur(4px);
+    }
+}
+
+@-webkit-keyframes blur-out {
+    0% {
+        -webkit-filter: blur(4px);
+        -moz-filter: blur(4px);
+        -o-filter: blur(4px);
+        -ms-filter: blur(4px);
+        filter: blur(4px);
+    }
+
+    100% {
+        -webkit-filter: blur(0px);
+        -moz-filter: blur(0px);
+        -o-filter: blur(0px);
+        -ms-filter: blur(0px);
+        filter: blur(0px);
+    }
+}
+
+@-moz-keyframes blur-out {
+    0% {
+        -webkit-filter: blur(4px);
+        -moz-filter: blur(4px);
+        -o-filter: blur(4px);
+        -ms-filter: blur(4px);
+        filter: blur(4px);
+    }
+
+    100% {
+        -webkit-filter: blur(0px);
+        -moz-filter: blur(0px);
+        -o-filter: blur(0px);
+        -ms-filter: blur(0px);
+        filter: blur(0px);
+    }
+}
+
+@-o-keyframes blur-out {
+    0% {
+        -webkit-filter: blur(4px);
+        -moz-filter: blur(4px);
+        -o-filter: blur(4px);
+        -ms-filter: blur(4px);
+        filter: blur(4px);
+    }
+
+    100% {
+        -webkit-filter: blur(0px);
+        -moz-filter: blur(0px);
+        -o-filter: blur(0px);
+        -ms-filter: blur(0px);
+        filter: blur(0px);
+    }
+}
+
+@keyframes blur-out {
+    0% {
+        -webkit-filter: blur(4px);
+        -moz-filter: blur(4px);
+        -o-filter: blur(4px);
+        -ms-filter: blur(4px);
+        filter: blur(4px);
+    }
+
+    100% {
+        -webkit-filter: blur(0px);
+        -moz-filter: blur(0px);
+        -o-filter: blur(0px);
+        -ms-filter: blur(0px);
+        filter: blur(0px);
+    }
+}
+
+.pop-up {
+	width: 100%;
+    position: fixed;
+    margin: 5% auto;
+    left: 0;
+    right: 0;
+    max-width: 70%;
+    z-index: 99999999;
+}
+
+.pop-box {
+    background-color: whitesmoke;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2%;
+    padding-bottom: 2%;
+    position: relative;
+    -webkit-box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.1);
+    box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.1);
+}
+
+.pop-small-6 {
+	width: 90%;
+}
+
+.pop-button {
+    display: inline-block;
+    background-color: #fbaa1e;
+    margin-bottom: 33px;
+    border-style: solid;
+    border-width: 0px;
+    cursor: pointer;
+    font-weight: normal;
+    line-height: normal;
+    margin: 0 0 1.25rem;
+    position: relative;
+    text-decoration: none;
+    text-align: center;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0;
+    padding-top: 1rem;
+    padding-right: 2rem;
+    padding-bottom: 1.0625rem;
+    padding-left: 2rem;
+    font-size: 1.1em;
+    color: white;
+    transition: background-color 300ms ease-out;
+}
+
+.pop-button:hover {
+    background-color: #f15b52;
+    -webkit-box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.1);
+    box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.1);
+    color: #ffffff;
+}
+
+.close-button {
+    transition: all 0.5s ease;
+    position: absolute;
+    background-color: #fbaa1e;
+    padding: 1.5px 7px;
+    left: 0;
+    margin-left: -10px;
+    margin-top: -9px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    color: white;
+    -webkit-box-shadow: -4px -2px 6px 0px rgba(0,0,0,0.1);
+    -moz-box-shadow: -4px -2px 6px 0px rgba(0,0,0,0.1);
+    box-shadow: -3px 1px 6px 0px rgba(0,0,0,0.1);
+}
+
+.close-button:hover {
+    background-color: #f15b52;
+    color: #fff;
+}
+
+.pop-up h3 {
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    color: #fff;
+    background-color: #29aae2;
+    font-size: 2em;
+    font-weight: 300;
+    margin-bottom: 0.6em;
+}
+
+.pop-up p {
+    padding: 10px 40px 7px 40px;
+    color: dimgray;
+    line-height: 1.3;
+    /* margin-bottom: 1.25rem; */
+    text-rendering: optimizeLegibility;
+    font-weight: 300;
+    font-size: 1.1em;
+}
+
+.pop-up h1 {
+    color: dimgray;
+    font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
+}
+
+.zastava {
+    display: inline-block;
+    position: relative;
+    float: right;
+    right: 20px;
+    font-size: 0.6em;
+}
+
+.zastava:hover {
+    cursor: pointer;
+    color: black;
+    transition: 0.5s ease;
 }
